# IC2

./: .dev_env.sh  .travis.yml  README.md  thing.ods
Calibration Targets/: mcircle_10x10.yaml  mcircle_5x5.yaml
industrial_calibration/: CMakeLists.txt  package.xml
industrial_calibration/include/industrial_calibration/: cal_data_collector.h  data_collector.h  helper_functions.h
industrial_calibration/launch/: asus_abb.launch  cal_data_collector.launch  camera.launch  camera_and_robot.launch  data_collector.launch  extrinsic_example.launch  extrinsic_example_debug.launch  extrinsic_simulate.launch  intrinsic_example.launch  intrinsic_example_abb.launch  intrinsic_example_mh3.launch  sim_extrinsic.launch
industrial_calibration/launch/research/: data_cleaner.launch  intrinsic_ic2.launch  intrinsic_ic2_single.launch  intrinsic_opencv.launch  intrinsic_opencv_single.launch
industrial_calibration/src/: cal_data_collector.cpp  data_collector.cpp  extrinsic_example.cpp  extrinsic_example_debug.cpp  extrinsic_simulate.cpp  intrinsic_example.cpp  intrinsic_example_abb.cpp  intrinsic_example_mh3.cpp  sim_extrinsic.cpp
industrial_calibration/src/research/: data_cleaner.cpp  intrinsic_ic2.cpp  intrinsic_ic2_sim.cpp  intrinsic_ic2_single.cpp  intrinsic_opencv.cpp  intrinsic_opencv_single.cpp
industrial_calibration_gui/: CMakeLists.txt  TODO.txt  package.xml  plugin.xml
industrial_calibration_gui/include/industrial_calibration_gui/: calibration_data_collector.h  calibration_panel.h  calibration_widget.h
industrial_calibration_gui/include/industrial_calibration_gui/extrinsic_calibration_gui/: calibration_panel.h  calibration_widget.h
industrial_calibration_gui/launch/: collect_data.launch  extrinsic_calibration_gui.launch
industrial_calibration_gui/rviz/: extrinsic_calibration_gui.rviz  industrial_calibration_gui.rviz
industrial_calibration_gui/src/: calibration_data_collector.cpp  calibration_panel.cpp  calibration_widget.cpp  calibration_widget.ui
industrial_calibration_gui/src/extrinsic_calibration_gui/: calibration_panel.cpp  calibration_widget.cpp  calibration_widget.ui
industrial_calibration_libs/: CMakeLists.txt  package.xml
industrial_calibration_libs/include/industrial_calibration_libs/: calibration.h  circle_detector.h  cost_functions.h  industrial_calibration_libs.h  observations.h  observations_old.h  targets.h  types.h
industrial_calibration_libs/include/industrial_calibration_libs/calibration_types/: camera_on_wrist_extrinsic.h  camera_on_wrist_extrinsic_intrinsic.h  camera_on_wrist_intrinsic.h  research_intrinsic.h
industrial_calibration_libs/old/: observations_old.cpp
industrial_calibration_libs/src/: calibration.cpp  circle_detector.cpp  industrial_calibration_libs.cpp  observations.cpp  observations_old.cpp  targets.cpp  types.cpp
industrial_calibration_libs/src/calibration_types/: camera_on_wrist_extrinsic.cpp  camera_on_wrist_extrinsic_intrinsic.cpp  camera_on_wrist_intrinsic.cpp  research_intrinsic.cpp
industrial_calibration_libs/test/: test_calibration.cpp  test_cost_functions.cpp  test_industrial_calibration_libs.cpp  test_observations.cpp  test_targets.cpp  test_utils.h
industrial_calibration_libs/test/resources/mcircles_10x10/: mcircles_10x10.yaml
industrial_calibration_libs/test/resources/mcircles_10x10/extrinsic/: camera_info.txt
industrial_calibration_libs/test/resources/mcircles_10x10/extrinsic/tf/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
industrial_calibration_libs/test/resources/mcircles_10x10/intrinsic/: camera_info.txt
industrial_calibration_libs/test/resources/mcircles_10x10/intrinsic/tf/: 0.yaml  1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml  26.yaml  27.yaml  28.yaml  29.yaml  3.yaml  30.yaml  31.yaml  32.yaml  33.yaml  34.yaml  35.yaml  36.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
industrial_calibration_libs/test/resources/mcircles_7x5/: mcircles_7x5_np.yaml
industrial_calibration_libs/test/resources/mcircles_7x5/dataset_1/tf/: 1.yaml  10.yaml  12.yaml  13.yaml  14.yaml  15.yaml  2.yaml  4.yaml  5.yaml  8.yaml
industrial_calibration_libs/test/resources/mcircles_7x5/dataset_2/tf/: 1.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  3.yaml  4.yaml  5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
industrial_calibration_libs/test/resources/mcircles_7x5/tf/: 11.yaml  3.yaml  6.yaml  7.yaml  9.yaml
industrial_calibration_libs/test/resources/mcircles_9x12/: mcircles_9x12.yaml
industrial_calibration_libs/test/resources/mcircles_9x12/intrinsic/: camera_info.txt
industrial_calibration_libs/test/resources/mcircles_9x12/intrinsic/tf/: 3.yaml  4.yaml  5.yaml  6.yaml
industrial_calibration_libs/test/resources/mcircles_9x12/intrinsic_abb/: camera_info.yaml
industrial_calibration_libs/test/resources/mcircles_9x12/intrinsic_abb/tf/: 0.yaml  1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml  v0.yaml  v1.yaml
industrial_calibration_libs/test/resources/mcircles_9x12/intrinsic_mh3/tf/: 0.yaml  1.yaml  2.yaml
target_generator/: README.md
target_generator/sample_targets/: mcircles_7x5.yaml
target_generator/scripts/: .gitignore  gen_pattern.py  generate_yaml.py
target_generator/scripts/old/: gen_pattern.py
temp/: build.sh  calibrate.cpp
